--- a/index.html
+++ b/index.html
@@ -35,9 +35,61 @@
         </nav>
     </header>
     <main>
+        <section>
+        <h2>¿Quien sera?</h2>
+        <article>
         <p>En el mundo de League of legens todas las semanas tenemos cambios en la grieta del invocador por eso mismo abrimos eta encuesta a la comunidad para que elija su campeon favorito de esta semana</p>
+        <p>Esta semana como es de costumbre lo seleccionaras <strong>tu</strong> en el siguiente formulario</p>
+        </article>
+        </section>
+        <form>
+
+        </form>
     </main>
-    <footer>
+    <footer method="POST">
+        <section>
+            <fieldset>
+                <legend><em>Registra tu voto</em> </legend>
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre"name="nombre"placeholder="Obligatorio"requiered>
+                <label for="edad">Edad:</label>
+                <input type="number" name="edad" id="edad"placeholder="18" min="18" requiered>
+                <label for="email">Email:</label>
+                <input type="email" name="email" id="email"requiered placeholder="ejemplo@gmail.com">
+                <label for="fecha ingreso">Día de votacion</label>
+                <input type="date">
+                <label for="Sexo">Sexo:</label>
+                <select name="sexo" id="sexo">
+                    <option value="/">--Seleccione--</option>
+                    <option value="Hombre">Homrbe</option>
+                    <option value="Mujer">Mujer</option>
+                    <option value="Otro">Otro</option>
+                </select>
+                <label for="champFav">Campon favorito de la semana:</label>
+                <input type="radio" id="Quinn" name="champFav" value="Quinn">
+                <label for="Quinn">Quinn</label>
+
+                <input type="radio" name="champFav" id="Hecarim" value="Hecarim">
+                <label for="Hecarim">Hecarim</label>
+
+                <input type="radio" name="champFav" id="Teemo" value="Teemo">
+                <label for="Teemo">Teemo</label>
+
+                <input type="radio" name="champFav" id="Cassiopeia"value="Cassiopeia">
+                <label for="Cassiopeia">Cassiopeia</label>
+
+                <input type="radio" name="champFav" id="karthus"value="karthus">
+                <label for="karthus">Karthus</label>
+
+                <input type="radio" name="champFav" id="zac"value="zac">
+                <label for="zac">Zac</label>
+
+                <p>Esperammos que esta semana el campeon seleccionado sea del agrado de toda la comunidad, la eleccion esta en tus manos !En hora buena!</p>
+                <input type="reset"  value="Borrar datos introducidos">
+                <input type="submit"value="Enviar">
+
+            </fieldset>
+        </section>
 
     </footer>
     
