--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <label for="Sexo">Sexo:</label>
                 <select name="sexo" id="sexo">
                     <option value="/">--Seleccione--</option>
-                    <option value="Hombre">Homrbe</option>
+                    <option value="Hombre">Hombre</option>
                     <option value="Mujer">Mujer</option>
                     <option value="Otro">Otro</option>
                 </select>
