--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <option value="Mujer">Mujer</option>
                         <option value="Otro">Otro</option>
                     </select>
-                    <label for="radio" >Campeon favorito de la semana:</label>
+                    <label for="radio" id="radio" >Campeon favorito de la semana:</label>
                     <input type="radio" id="Quinn" name="champFav" value="Quinn">
                     <label for="Quinn">Quinn</label>
     
