--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Campeones favorito de League of legends</h1>
-        <img src="https://esports.as.com/2019/05/20/league-of-legends/campeones-League-of-Legends_1246985298_745509_1024x576.jpg" alt="Imagen de algunos campeones del League of legends" width="1024" height="576">
+        <img src="https://esports.as.com/2019/05/20/league-of-legends/campeones-League-of-Legends_1246985298_745509_1024x576.jpg" alt="Imagen de algunos campeones del League of legends" title="Quinn, TEMO, Cassiopeia, Shaco" width="1024" height="576">
         <nav>
             <ul>
                 <li>
